Need to fix text above and text below board for small device screens (not centered)

--- a/css/style.css
+++ b/css/style.css
@@ -199,114 +199,3 @@ a:hover {
        }
    }
    }
-
-   /* ----------- Galaxy S3 ----------- */
-
-/* Portrait and Landscape */
-@media screen
-  and (device-width: 360px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 2) {
-  h1 {
-    margin-right: 40px;
-    margin-left: 40px;
-  }
-}
-
-/* Portrait */
-@media screen
-  and (device-width: 320px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-    h1 {
-      margin-right: 40px;
-      margin-left: 40px;
-    }
-}
-
-/* Landscape */
-@media screen
-  and (device-width: 320px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-    h1 {
-      margin-right: 40px;
-      margin-left: 40px;
-    }
-}
-
-/* ----------- Galaxy S4, S5 and Note 3 ----------- */
-
-/* Portrait and Landscape */
-@media screen
-  and (device-width: 320px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 3) {
-    h1 {
-      margin-right: 40px;
-      margin-left: 40px;
-    }
-}
-
-/* Portrait */
-@media screen
-  and (device-width: 320px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 3)
-  and (orientation: portrait) {
-    h1 {
-      margin-right: 40px;
-      margin-left: 40px;
-    }
-}
-
-/* Landscape */
-@media screen
-  and (device-width: 320px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 3)
-  and (orientation: landscape) {
-    h1 {
-      margin-right: 40px;
-      margin-left: 40px;
-    }
-}
-
-/* ----------- Galaxy S6 ----------- */
-
-/* Portrait and Landscape */
-@media screen
-  and (device-width: 360px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 4) {
-    h1 {
-      margin-right: 40px;
-      margin-left: 40px;
-    }
-}
-
-/* Portrait */
-@media screen
-  and (device-width: 360px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 4)
-  and (orientation: portrait) {
-    h1 {
-      margin-right: 40px;
-      margin-left: 40px;
-    }
-}
-
-/* Landscape */
-@media screen
-  and (device-width: 360px)
-  and (device-height: 640px)
-  and (-webkit-device-pixel-ratio: 4)
-  and (orientation: landscape) {
-    h1 {
-      margin-right: 40px;
-      margin-left: 40px;
-    }
-}
